examples/error/src/app/screen.tsx
import { Text } from 'ink'

export default function HomeScreen() {
  return <Text>Home Page</Text>
}
